# llm-inference-optimization

./: .gitignore  README.md  docker-compose.yml  et --soft HEAD~1  main.py  prometheus.yml  pyproject.toml
data/: baseline_results.csv  grafana_test.csv
src/: config.py
src/benchmarks/: benchmark_batching.py  benchmark_kv_cache.py  benchmark_quantization.py  benchmark_speculative.py  evaluate_quality.py  feed_metrics.py  harness.py  metrics.py
src/optimizations/: batching.py  kv_cache.py  quantization.py  speculative.py
src/server/: app.py  inference.py
